/* eslint-disable jest/expect-expect, jest/no-done-callback */

import path from 'path';
import Stream from 'stream';
import conventionalChangelogCore from 'conventional-changelog-core';
import conventionalRecommendedBump from 'conventional-recommended-bump';
import shell from 'shelljs';
import { describe, it, expect, beforeEach, afterEach } from 'vitest';
import * as config from '../src';

function gitDummyCommit(msg: string[] | string, silent: boolean = true) {
	const args: string[] = ['--allow-empty', '--no-gpg-sign'];

	if (Array.isArray(msg)) {
		msg.forEach((m) => {
			args.push(`-m"${m}"`);
		});
	} else {
		args.push(`-m"${msg}"`);
	}

	shell.exec(`git commit ${args.join(' ')}`, { silent });
}

function captureStreamOutput(stream: Stream.Readable) {
	return new Promise((resolve, reject) => {
		let data = '';

		stream
			.on('error', reject)
			.on('data', (chunk: string) => {
				data += String(chunk);
			})
			.on('end', () => {
				expect(data.trim()).toMatchSnapshot();
				resolve(undefined);
			});
	});
}

describe('conventional-changelog-beemo', () => {
	const commonConfig = {
		config,
		pkg: {
			path: path.join(__dirname, 'package.json'),
		},
	};

	beforeEach(() => {
		(shell.config as any).resetForTesting();
		shell.cd(__dirname);
		shell.mkdir('tmp');
		shell.cd('tmp');
		shell.mkdir('git-templates');
		shell.exec('git init --template=./git-templates');
	});

	afterEach(() => {
		shell.cd(__dirname);
		shell.rm('-rf', 'tmp');
	});

	it('supports all types at once', () => {
		gitDummyCommit(['release: New major!', 'Note: New build system.']);
		gitDummyCommit(['break: Forms have changed', 'Note: They are easier now!']);
		gitDummyCommit(['new: amazing new module', 'Not backward compatible.']);
		gitDummyCommit('fix: updated i18n');
		gitDummyCommit(['update(modal, button): added accessibility', 'closes #1, #2']);
		gitDummyCommit('feature(core): settings refactor');
		gitDummyCommit('Random commit with no type');
		gitDummyCommit('docs: added getting started');
		gitDummyCommit('style(button): polished rounded corners');
		gitDummyCommit(['security(auth): improved logic', 'fixes #3']);
		gitDummyCommit('Revert PR #1');
		gitDummyCommit('ci(travis): fixed yaml config');
		gitDummyCommit('build(deps): updated dev tools');
		gitDummyCommit('test: setup testing framework');
		gitDummyCommit('internal(ts): updated types');
		gitDummyCommit('deps(babel,jest): Bumped to latest');
		gitDummyCommit(['patch(router): Fix params']);
		gitDummyCommit('types: Removed any');
		gitDummyCommit('perf: Speeeeed');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('works if there is no semver tag', () => {
		gitDummyCommit(['build: first build setup', 'Note: New build system.']);
		gitDummyCommit(['ci(travis): add TravisCI pipeline', 'Continuously integrated.']);
		gitDummyCommit(['new: amazing new module', 'Not backward compatible.']);
		gitDummyCommit(['fix(compile): avoid a bug', 'The Change is huge.']);
		gitDummyCommit(['update(ngOptions): make it faster', 'closes #1, #2']);
		gitDummyCommit('revert(ngOptions): bad commit');
		gitDummyCommit('fix(*): oops');
		gitDummyCommit('type: Added unknown');
		gitDummyCommit('tests: Added before hooks');
		gitDummyCommit('perf: Speeeeed');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('works if there is a semver tag', () => {
		shell.exec('git tag v1.0.0');
		gitDummyCommit('update: some more features');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
				outputUnreleased: true,
			}),
		);
	});

	it('works with unknown host', () => {
		gitDummyCommit('docs: add manual');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
				pkg: {
					path: path.join(__dirname, 'package-unknown-repo.json'),
				},
			}),
		);
	});

	it('uses h1 for major versions', () => {
		gitDummyCommit('break: new shit');
		gitDummyCommit('release: new stuff');
		gitDummyCommit('fix: just a patch');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('uses h2 for minor versions', () => {
		gitDummyCommit('new: new shit');
		gitDummyCommit('update: new stuff');
		gitDummyCommit('feature(modal): better modals');
		gitDummyCommit('fix: just a patch');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('uses h3 for patch versions', () => {
		gitDummyCommit('docs: add a manual');
		gitDummyCommit('patch: just a patch');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('replaces #[0-9]+ with issue URL', () => {
		gitDummyCommit(['new(awesome): fix #88']);

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('replaces @username with GitHub user URL', () => {
		gitDummyCommit(['feature(awesome): issue brought up by @bcoe! on Friday']);

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('doesnt replace @username if wrapped in backticks', () => {
		gitDummyCommit(['deps: Updated \\`@types\\` packages.']);

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('handles multiple notes', () => {
		gitDummyCommit(['release: Initial release', 'Note: Made a lot of changes']);
		gitDummyCommit(['fix(button): Made button changes', 'Note: Button is more buttony']);

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('links commits/issues to deep repositories correctly', () => {
		gitDummyCommit(['update: supports sub-package links', ' closes #10']);

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
				pkg: {
					path: path.join(__dirname, 'package-monorepo.json'),
				},
			}),
		);
	});

	it('supports non public GitHub repository locations', () => {
		gitDummyCommit(['update(events): implementing #5 by @dlmr', ' closes #10']);
		gitDummyCommit('new: why this work?');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
				pkg: {
					path: path.join(__dirname, 'package-custom-repo.json'),
				},
			}),
		);
	});

	it('only replaces with link to user if it is an username', () => {
		gitDummyCommit(['fix: use npm@5 (@username)']);
		gitDummyCommit([
			'build(deps): bump @dummy/package from 7.1.2 to 8.0.0',
			'break: The Change is huge.',
		]);

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('handles merge commits', () => {
		gitDummyCommit(['fix: use yarn']);
		gitDummyCommit('Merge pull request #29 from owner/repo');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	it('handles revert type', () => {
		gitDummyCommit('revert(foo): undo this');
		gitDummyCommit('Revert this is the PR title');

		return captureStreamOutput(
			conventionalChangelogCore({
				...commonConfig,
			}),
		);
	});

	describe('recommended bump', () => {
		['break', 'breaking', 'release'].forEach((major) => {
			it(`bumps major version for ${major}`, () => {
				gitDummyCommit(`${major}: new stuff`);
				gitDummyCommit(`${major}(todo): with scope`);

				return conventionalRecommendedBump(
					{
						...commonConfig,
					},
					(error: Error | null, result: object) => {
						expect(error).toBeNull();
						expect(result).toEqual({
							level: 0,
							reason: 'There are 2 breaking changes and 0 new features',
							releaseType: 'major',
						});
					},
				);
			});
		});

		['new', 'update', 'feature'].forEach((minor) => {
			it(`bumps minor version for ${minor}`, () => {
				gitDummyCommit(`${minor}: new stuff`);
				gitDummyCommit(`${minor}(todo): with scope`);

				return conventionalRecommendedBump(
					{
						...commonConfig,
					},
					(error: Error | null, result: object) => {
						expect(error).toBeNull();
						expect(result).toEqual({
							level: 1,
							reason: 'There are 0 breaking changes and 2 new features',
							releaseType: 'minor',
						});
					},
				);
			});
		});

		[
			'fix',
			'deps',
			'style',
			'styles',
			'security',
			'revert',
			'misc',
			'type',
			'types',
			'perf',
		].forEach((patch) => {
			it(`bumps patch version for ${patch}`, () => {
				gitDummyCommit(`${patch}: new stuff`);
				gitDummyCommit(`${patch}(todo): with scope`);

				return conventionalRecommendedBump(
					{
						...commonConfig,
						ignoreReverted: false,
					},
					(error: Error | null, result: object) => {
						expect(error).toBeNull();
						expect(result).toEqual({
							level: 2,
							reason: 'There are 0 breaking changes and 0 new features',
							releaseType: 'patch',
						});
					},
				);
			});
		});

		['docs', 'ci', 'cd', 'build', 'test', 'tests', 'internal'].forEach((minor) => {
			it(`doesnt bump version for ${minor}`, () => {
				gitDummyCommit(`${minor}: new stuff`);
				gitDummyCommit(`${minor}(todo): with scope`);

				return conventionalRecommendedBump(
					{
						...commonConfig,
					},
					(error: Error | null, result: object) => {
						expect(error).toBeNull();
						expect(result).toEqual({
							level: null,
							reason: 'There are 0 breaking changes and 0 new features',
						});
					},
				);
			});
		});

		it('does nothing when no type exist', () => {
			gitDummyCommit('new stuff');
			gitDummyCommit('commit without a type');

			return conventionalRecommendedBump(
				{
					...commonConfig,
				},
				(error: Error | null, result: object) => {
					expect(error).toBeNull();
					expect(result).toEqual({
						level: null,
						reason: 'There are 0 breaking changes and 0 new features',
					});
				},
			);
		});
	});
});
